--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     # Add any other specific libraries your dashboard might need
     # e.g., "scikit-learn", "seaborn", "openpyxl" for Excel support
     "plotly>=6.1.2",
+    "ipykernel>=6.29.5",
 ]
 readme = "README.md"
 requires-python = ">=3.9"
