--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     # e.g., "scikit-learn", "seaborn", "openpyxl" for Excel support
     "plotly>=6.1.2",
     "ipykernel>=6.29.5",
+    "pyinstaller>=6.14.0",
 ]
 readme = "README.md"
 requires-python = ">=3.9"
