--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "plotly>=6.1.2",
     "ipykernel>=6.29.5",
     "pyinstaller>=6.14.0",
+    "pytest>=8.4.0",
 ]
 readme = "README.md"
 requires-python = ">=3.9"
