--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "ipykernel>=6.29.5",
     "pyinstaller>=6.14.0",
     "pytest>=8.4.0",
+    "ruff>=0.11.12",
+    "pre-commit>=4.2.0",
 ]
 readme = "README.md"
 requires-python = ">=3.9"
