--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pytest>=8.4.0",
     "ruff>=0.11.12",
     "pre-commit>=4.2.0",
+    "detect-secrets>=1.5.0",
 ]
 readme = "README.md"
 requires-python = ">=3.9"
