--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-toml
-      - id: check-added-large-files
+#      - id: check-added-large-files
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: "v0.11.12"
@@ -15,9 +15,9 @@ repos:
         args: ["--fix", "--exit-non-zero-on-fix"]
       - id: ruff-format
 
-  - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.5.0  # Use the latest version
-    hooks:
-      - id: detect-secrets
-        args: ["--baseline", ".secrets.baseline"]
-        exclude: tests/  # Exclude tests directory (optional)
+  # - repo: https://github.com/Yelp/detect-secrets
+  #   rev: v1.5.0  # Use the latest version
+  #   hooks:
+  #     - id: detect-secrets
+  #       args: ["--baseline", ".secrets.baseline"]
+  #       exclude: tests/  # Exclude tests directory (optional)
